# rss-to-slack

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
src/: config.py  fastapi.py  feed.py  filter.py  parser.py  slack.py  utils.py
src/scripts/: main.py  mark_all_read.py
